# FitFusion

./: .env.example  .gitignore  GEMINI_API_MIGRATION.md  QUICKSTART.md  README.md  start_dev.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .flake8  debug_async_gemini.py  debug_gemini.py  debug_health_check.py  deep_debug_service.py  main.py  print_snippets.py  pyproject.toml  requirements.txt  supabase_schema.sql
backend/src/agents/: analytics_expert.py  base_agent.py  cardio_coach.py  equipment_advisor.py  general_coach.py  motivation_coach.py  nutritionist.py  preferences_manager.py  program_director.py  recovery_specialist.py  strength_coach.py
backend/src/api/: ai_generation.py  equipment.py  profile.py  programs.py  sessions.py
backend/src/middleware/: cors.py
backend/src/models/: equipment.py  exercise.py  progress_record.py  user_profile.py  workout_models.py  workout_program.py  workout_session.py
backend/src/services/: crew_orchestrator.py  database_service.py  gemini_service.py  gemini_service_debug.py  gemini_service_fixed.py
backend/src/utils/: error_handler.py
frontend/: next.config.mjs  package-lock.json  package.json  tmp_replace.py
frontend/docs/: remaining-work.md
frontend/src/app/: page.tsx  store.ts
frontend/src/hooks/: useOnlineStatus.ts
frontend/src/store/: index.ts
frontend/tests/e2e/: ai-generation.spec.ts  equipment.spec.ts  offline.spec.ts  (+1 more)
specs/001-create-a-mobile/: corrections-summary.md  data-model.md  deployment.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+21 files in other folders)
